<resources>
    <string name="app_name">KS HomeGas</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="nav_login">Login</string>
    <string name="action_logout">Logout</string>
    <string name="login_name">User Name</string>
    <string name="email">Email</string>
    <string name="login_password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="login">Login : </string>
    <string name="submit">Submit</string>
    <string name="sign_up">Sign Up here!</string>
    <string name="phone">Phone</string>
    <string name="code">Code</string>
    <string name="address">Address</string>
    <string name="cylinder_name">Cylinder Name</string>
    <string name="book_cylinder">Book Cylinder</string>
    <string name="book_history">Booking History</string>
    <string name="loading">Loading...</string>
    <string name="request">Request!</string>
    <string name="your_email">Your Email</string>
    <string name="msg">Message</string>
    <string name="order_history">Order History</string>
    <string name="order_req">Order Request</string>
    <string name="customer_name">Customer Name : </string>
    <string name="customer_address">Address : </string>
    <string name="customer_phone">Phone : </string>
    <string name="cylinder_type">Cylinder Type : </string>
    <string name="quantity">Quantity : </string>
    <string name="expected_time">Expected Time : </string>
    <string name="cancel">Cancel</string>
    <string name="accept">Accept</string>
    <string name="no_request">No Request are found</string>
    <string name="no_history">No History are found</string>
    <string name="balance">Balance : 0.0</string>
    <string name="dealer_list">Dealer List</string>
    <string name="service_center">Service Center</string>
    <string name="talk_us">Talk to us</string>
    <string name="feedback">Feedback your Dealers</string>
    <string name="mobile_view">Mobile No. : </string>
    <string name="mobile_no">+60 164440779</string>
    <string name="email_view">Email : </string>
    <string name="email_id">moorthy@kshomegas.com</string>
    <string name="website_view">Website : </string>
    <string name="website">kshomegas.com</string>
    <string name="same_address">same as Register Address</string>
    <string name="update_profile">Update Profile</string>
    <string name="change_password">Change Password</string>
    <string name="new_password">New Password</string>
    <string name="old_password">Old Password</string>
</resources>
