<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_login"
            android:icon="@drawable/user"
            android:title="@string/nav_login" />
        <item
            android:id="@+id/nav_book_cylinder"
            android:icon="@drawable/cylinder"
            android:title="@string/book_cylinder"
            android:visible="true"/>
        <item
            android:id="@+id/nav_book_history"
            android:icon="@drawable/history"
            android:title="@string/book_history"
            android:visible="true"/>
        <item
            android:id="@+id/nav_order_history"
            android:icon="@mipmap/order_history"
            android:title="@string/order_history"
            android:visible="false"/>
        <item
            android:id="@+id/nav_order_req"
            android:icon="@mipmap/order_req"
            android:title="@string/order_req"
            android:visible="false"/>
        <item
            android:id="@+id/nav_order_balance"
            android:icon="@drawable/cash"
            android:title="@string/balance"
            android:visible="false"/>
        <item
            android:id="@+id/nav_dealer_list"
            android:icon="@drawable/dealerlist"
            android:title="@string/dealer_list"
            android:visible="false"/>
        <item
            android:id="@+id/nav_service_center"
            android:icon="@drawable/servicecenter"
            android:title="@string/service_center" />

    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_talk"
                android:icon="@drawable/talktous"
                android:title="@string/talk_us" />
            <item
                android:id="@+id/nav_feedback"
                android:icon="@drawable/feedback"
                android:title="@string/feedback" />
        </menu>
    </item>

</menu>
