<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="24dp"
    android:layout_marginTop="24dp"
    android:layout_marginLeft="24dp"
    android:layout_marginRight="24dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/name_layout">
        <TextView
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:text="@string/customer_name"
            android:textColor="@android:color/black"
            android:textStyle="bold"/>
        <TextView
            android:id="@+id/customer_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/address_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/name_layout"
        android:layout_marginTop="10dp">
        <TextView

            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:text="@string/customer_address"
            android:textColor="@android:color/black"
            android:textStyle="bold"/>
        <TextView
            android:id="@+id/customer_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/phone_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/address_layout"
        android:layout_marginTop="10dp">
        <TextView
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:text="@string/customer_phone"
            android:textColor="@android:color/black"
            android:textStyle="bold"/>
        <TextView
            android:id="@+id/customer_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/cylinder_type_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/phone_layout"
        android:layout_marginTop="10dp">
        <TextView
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:text="@string/cylinder_type"
            android:textColor="@android:color/black"
            android:textStyle="bold"/>
        <TextView
            android:id="@+id/customer_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/quantity_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/cylinder_type_layout"
        android:layout_marginTop="10dp">
        <TextView
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:text="@string/quantity"
            android:textColor="@android:color/black"
            android:textStyle="bold"/>
        <TextView
            android:id="@+id/customer_qty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/time_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/quantity_layout"
        android:layout_marginTop="10dp">
        <TextView
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:text="@string/expected_time"
            android:textColor="@android:color/black"
            android:textStyle="bold"/>
        <TextView
            android:id="@+id/customer_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/time_layout"
        android:layout_marginTop="24dp"
        android:layout_centerInParent="true"
        android:orientation="horizontal">

    <Button
        android:id="@+id/cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        android:textColor="@android:color/white"
        android:background="@drawable/button_background" />

    <Button
        android:id="@+id/accept"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/accept"
        android:textColor="@android:color/white"
        android:background="@drawable/button_background"
        android:layout_below="@+id/time_layout"
        android:layout_marginLeft="24dp"/></LinearLayout>
</RelativeLayout>

</RelativeLayout>