<?xml version="1.0" encoding="UTF-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:paddingLeft="24dp"
    android:paddingStart="24dp"
    android:paddingRight="24dp"
    android:paddingEnd="24dp"
    android:paddingTop="20dp">

    <TextView
        android:id="@+id/heading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textColor="@android:color/black"/>

    <RelativeLayout
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@+id/heading"
        android:layout_marginTop="24dp"
        android:paddingTop="24dp"
        android:paddingLeft="24dp"
        android:paddingRight="24dp"
        android:paddingBottom="24dp"
        android:paddingStart="24dp"
        android:background="@drawable/edit_roundcorner">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/code_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/code"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="+60"
                android:textColor="@android:color/black"
                android:maxLines="1"
                android:focusable="false"/></android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/login_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/code_layout">

            <EditText
                android:id="@+id/edit_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="phone"
                android:maxLines="1"
                android:hint="@string/phone"
                android:maxLength="11"/></android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/password_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/login_layout">

            <EditText
                android:id="@+id/edit_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:hint="@string/login_password"
                android:maxLines="1" /></android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/submit"
            android:textColor="@android:color/white"
            android:background="@drawable/button_background"
            android:layout_below="@+id/password_layout"
            android:layout_marginTop="24dp"/>

        <TextView
            android:id="@+id/request"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/request"
            android:textStyle="italic"
            android:textColor="@color/colorAccent"
            android:layout_toRightOf="@+id/submit"
            android:layout_below="@+id/password_layout"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="24dp"
            android:paddingTop="10dp"/>

    </RelativeLayout>

</RelativeLayout>